# Echo

./: README.md  imgui.ini  imgui_app.sln
Chat/: CMakeLists.txt  ClientNetwork.cpp  ClientNetwork.h  PeopleWindow.cpp  PeopleWindow.h  User.h  global_functions.cpp
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
Server/x64/Debug/: Server.exe.recipe  Server.ilk  servernetwork.obj.enc  vc143.idb
Server/x64/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gui_client/: ConnectionWindow.cpp  ConnectionWindow.h  ConversationWindow.cpp  ConversationWindow.h  clientnetwork.cpp  clientnetwork.hpp  global_functions.cpp  global_functions.h  gui.cpp  gui.h  imgui.ini  main.cpp  mongodb.cpp  mongodb.h
gui_client/Dependencies/ImGui/: imgui_draw.cpp
gui_client/Dependencies/mongo-cxx-driver/lib/: bsoncxx.lib  mongocxx.lib
gui_client/Dependencies/mongo-cxx-driver/lib/cmake/bsoncxx-3.8.0/: bsoncxx-config-version.cmake  bsoncxx-config.cmake  bsoncxx_targets-debug.cmake  bsoncxx_targets.cmake
gui_client/Dependencies/mongo-cxx-driver/lib/cmake/libbsoncxx-3.8.0/: libbsoncxx-config.cmake
gui_client/Dependencies/mongo-cxx-driver/lib/cmake/libmongocxx-3.8.0/: libmongocxx-config.cmake
gui_client/Dependencies/mongo-cxx-driver/lib/cmake/mongocxx-3.8.0/: mongocxx_targets-debug.cmake  mongocxx_targets.cmake
gui_client/Dependencies/mongo-cxx-driver/lib/pkgconfig/: libbsoncxx.pc  libmongocxx.pc
gui_client/Dependencies/mongo-cxx-driver/share/mongo-cxx-driver/: uninstall.cmd
imgui_app/: client.cpp  clientnetwork.cpp  clientnetwork.hpp  gui.cpp  gui.h  imgui.ini  imgui_app.vcxproj  imgui_app.vcxproj.filters  main.cpp
imgui_app/x64/Debug/: imgui_app.exe.recipe  vc143.idb
imgui_app/x64/Debug/imgui_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  imgui_app.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
server/: servernetwork.cpp  servernetwork.hpp
x64/Debug/: imgui.ini
